# Mandelbulb-Viewer

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac  mandelbulb.cbp
data/shaders/: MandelbulbQuick.frag  MandelbulbQuick.vert
src/: Makefile.in  vcamera.cpp  vcamera.h  viewer.cpp  viewer.h  viewer_settings.cpp  viewer_settings.h
src/core/: Makefile.in  conffile.cpp  conffile.h  display.h  matrix.h  sdlapp.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vectors.h
